--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -84,6 +84,11 @@
             <ul class="nav nav-collapse">
               <li>
                 <a href="<%= estabelecimentos_path %>">
+                  <span class="sub-item">Ver meus Estabelecimentos</span>
+                </a>
+              </li>
+              <li>
+                <a href="<%= users_estabelecimentos_path %>">
                   <span class="sub-item">Gerenciar Estabelecimentos</span>
                 </a>
               </li>
