--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -95,6 +95,33 @@
             </ul>
           </div>
         </li>
+        <!-- Aqui começam as rotas de usuários do Devise -->
+        <li class="nav-item">
+          <a data-bs-toggle="collapse" href="#usuarios">
+            <i class="fas fa-users"></i>
+            <p>Usuários</p>
+            <span class="caret"></span>
+          </a>
+          <div class="collapse" id="usuarios">
+            <ul class="nav nav-collapse">
+              <li>
+                <a href="<%= usuarios_path %>">
+                  <span class="sub-item">Gerenciar Usuarios</span>
+                </a>
+              </li>
+              <li>
+                <a href="<%= new_user_registration_path %>">
+                  <span class="sub-item">Cadastrar</span>
+                </a>
+              </li>
+              <li>
+                <a href="<%= edit_user_registration_path %>">
+                  <span class="sub-item">Editar Perfil</span>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </li>
       </ul>
     </div>
   </div>
