feature: adicionando produtos

--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -95,6 +95,50 @@
             </ul>
           </div>
         </li>
+        <!-- Sidebar para Categorias -->
+        <li class="nav-item">
+          <a data-bs-toggle="collapse" href="#categorias">
+            <i class="fas fa-tags"></i>
+            <p>Categorias</p>
+            <span class="caret"></span>
+          </a>
+          <div class="collapse" id="categorias">
+            <ul class="nav nav-collapse">
+              <li>
+                <a href="<%= categorias_path %>">
+                  <span class="sub-item">Listar Categorias</span>
+                </a>
+              </li>
+              <li>
+                <a href="<%= new_categoria_path %>">
+                  <span class="sub-item">Cadastrar Categoria</span>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </li>
+        <!-- Sidebar para Produtos -->
+        <li class="nav-item">
+          <a data-bs-toggle="collapse" href="#produtos">
+            <i class="fas fa-box"></i>
+            <p>Produtos</p>
+            <span class="caret"></span>
+          </a>
+          <div class="collapse" id="produtos">
+            <ul class="nav nav-collapse">
+              <li>
+                <a href="<%= produtos_path %>">
+                  <span class="sub-item">Listar Produtos</span>
+                </a>
+              </li>
+              <li>
+                <a href="<%= new_produto_path %>">
+                  <span class="sub-item">Cadastrar Produto</span>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </li>
         <!-- Aqui começam as rotas de usuários do Devise -->
         <li class="nav-item">
           <a data-bs-toggle="collapse" href="#usuarios">
