--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -87,11 +87,13 @@
                   <span class="sub-item">Ver meus Estabelecimentos</span>
                 </a>
               </li>
-              <li>
-                <a href="<%= users_estabelecimentos_path %>">
-                  <span class="sub-item">Gerenciar Estabelecimentos</span>
-                </a>
-              </li>
+              <% if current_user.funcao&.nome == "CEO" %>
+                <li>
+                  <a href="<%= users_estabelecimentos_path %>">
+                    <span class="sub-item">Gerenciar Estabelecimentos</span>
+                  </a>
+                </li>
+              <% end %>
             </ul>
           </div>
         </li>
@@ -139,33 +141,35 @@
             </ul>
           </div>
         </li>
-        <!-- Aqui começam as rotas de usuários do Devise -->
-        <li class="nav-item">
-          <a data-bs-toggle="collapse" href="#usuarios">
-            <i class="fas fa-users"></i>
-            <p>Usuários</p>
-            <span class="caret"></span>
-          </a>
-          <div class="collapse" id="usuarios">
-            <ul class="nav nav-collapse">
-              <li>
-                <a href="<%= usuarios_path %>">
-                  <span class="sub-item">Gerenciar Usuarios</span>
-                </a>
-              </li>
-              <li>
-                <a href="<%= new_user_registration_path %>">
-                  <span class="sub-item">Cadastrar</span>
-                </a>
-              </li>
-              <li>
-                <a href="<%= edit_user_registration_path %>">
-                  <span class="sub-item">Editar Perfil</span>
-                </a>
-              </li>
-            </ul>
-          </div>
-        </li>
+        <!-- Exibindo o menu de Usuários apenas para o CEO -->
+        <% if current_user.funcao&.nome == "CEO"%>
+          <li class="nav-item">
+            <a data-bs-toggle="collapse" href="#usuarios">
+              <i class="fas fa-users"></i>
+              <p>Usuários</p>
+              <span class="caret"></span>
+            </a>
+            <div class="collapse" id="usuarios">
+              <ul class="nav nav-collapse">
+                <li>
+                  <a href="<%= usuarios_path %>">
+                    <span class="sub-item">Gerenciar Usuarios</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="<%= new_user_registration_path %>">
+                    <span class="sub-item">Cadastrar</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="<%= edit_user_registration_path %>">
+                    <span class="sub-item">Editar Perfil</span>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </li>
+        <% end %>
       </ul>
     </div>
   </div>
